; ModuleID = '/home/carl/AnghaBench/git/extr_wrapper.c_access_or_warn.c'
source_filename = "/home/carl/AnghaBench/git/extr_wrapper.c_access_or_warn.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@errno = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @access_or_warn(i8* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %8 = load i8*, i8** %4, align 8
  %9 = load i32, i32* %5, align 4
  %10 = call i32 @access(i8* %8, i32 %9)
  store i32 %10, i32* %7, align 4
  %11 = load i32, i32* %7, align 4
  %12 = icmp ne i32 %11, 0
  br i1 %12, label %13, label %21

13:                                               ; preds = %3
  %14 = load i32, i32* @errno, align 4
  %15 = load i32, i32* %6, align 4
  %16 = call i32 @access_error_is_ok(i32 %14, i32 %15)
  %17 = icmp ne i32 %16, 0
  br i1 %17, label %21, label %18

18:                                               ; preds = %13
  %19 = load i8*, i8** %4, align 8
  %20 = call i32 @warn_on_inaccessible(i8* %19)
  br label %21

21:                                               ; preds = %18, %13, %3
  %22 = load i32, i32* %7, align 4
  ret i32 %22
}

declare dso_local i32 @access(i8*, i32) #1

declare dso_local i32 @access_error_is_ok(i32, i32) #1

declare dso_local i32 @warn_on_inaccessible(i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
